# trippy

./: .gitignore  LICENSE  README.md  app.py  main.py  model.py  pyproject.toml  requirements.txt
agents/: content_extractor.py  maps_agent.py  pdf_maker.py  pipeline.py  search_agent.py  weather.py  weather_codes.py
templates/: index.html
