[project]
name = "tripplanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-mistralai>=1.1.6",
    "langdetect>=1.0.9",
    "markdown>=3.10.2",
    "playwright>=1.61.0",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "tavily>=1.1.0",
    "trafilatura>=2.1.0",
    "weasyprint>=69.0",
]
